@@ -3,6 +3,15 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2010-12-26 (SVN):
+    * Fix timidity strict aliasing warnings from certain gcc versions:
+    - playmidi.c (mid_song_read_wave): Changed to accept a sint8 pointer
+      instead of void*. Removed the sint8** casts frmo the compute_data()
+      calls.
+    - timidity.h (mid_song_read_wave): Adjusted prototype.
+    - snd_timidity.c (midi_buf_t): Changed midi_buffer type from unsigned
+      char to sint8.
+
 2010-12-25 (SVN):
     * Enabled wav and mp3 music streaming for dos builds. They are not
       that practical for dos, but not harmful, either.
